--- a/clint/src/Components/User/user.css
+++ b/clint/src/Components/User/user.css
@@ -1,4 +1,4 @@
-.sidebar{
+/* .sidebar{
     background-color: #212529;
     color: aliceblue;
     height: 100vh;
@@ -14,10 +14,10 @@
     padding: 0;
 }
 
-
+ */
 
 /* admin style  */
-.sidebar {
+/* .sidebar {
     height: 660px;
     width: 100%; 
   }
@@ -112,7 +112,7 @@
     background-color: #212529;
     color: aliceblue;
     height: 100vh;
-    width: 250px; /* Set initial width */
+    width: 250px; 
 }
 
 .side-items {
@@ -123,7 +123,7 @@
 .side-items a div {
     height: 45px;
     padding: 0;
-}
+} */
 
 /* Responsive Styles */
 @media only screen and (max-width: 1200px) {
